--- a/book.html
+++ b/book.html
@@ -47,12 +47,11 @@
       <div class="page">
         <div class="front">
           <p>
-            It’s incredible to think how just a few days ago, I didn’t even know
-            who you were. Meeting you through roblox was a chance I’m
-            forever grateful for. In the beginning, I wasn’t sure how we would
-            connect, how we’d talk, or how you’d be. But now, after just a short
-            time of talking, I’ve come to realize something—you're absolutely
-            amazing
+            Lama, from the moment I met you in Roblox, my world changed
+            in ways I never expected. You’re not just a name on my screen
+            you’re the one who makes every moment special, every conversation worth having.
+            I love you more than words can say, and no game or reality could ever replace what you mean to me. 
+            You’re my favorite part of every day, and I’m grateful to have you.
           </p>
         </div>
         <div class="back">
@@ -72,12 +71,11 @@
         </div>
         <div class="back">
           <p>
-            Beyond the surface, what truly stands out is your dedication, hard
-            work, and passion. You're not just someone to admire for your looks,
-            but an inspiration. Seeing how driven and focused you are in
-            everything you do makes me respect you even more. I believe you
-            embody the qualities of a true leader—someone who commands respect
-            in every way.
+            What truly draws me to you, beyond everything else, 
+            is your personality, dedication, and passion. You’re not just beautiful
+            you’re inspiring. The way you stay focused and committed to 
+            what you love makes me admire you even more. Your ambition, kindness, 
+            and the way you carry yourself show the qualities of someone truly special.
           </p>
         </div>
       </div>
@@ -147,7 +145,7 @@
           </p>
         </div>
         <div class="back">
-          <p>Will You be Mine? </p>
+          <p>I love you so much , Will you be my Valentine? </p>
         </div>
       </div>
 
