--- a/book.html
+++ b/book.html
@@ -101,7 +101,7 @@
           <p>
             I sometimes wish I could meet you in person, but I know it might be
             a long shot. Still, I hope that, even though we've only known each
-            other for a short time, you won't forget me. No matter what, I wish
+            other for a short time, i won't forget u. No matter what, I wish
             you a life filled with happiness, peace, and everything you truly
             deserve.
           </p>
@@ -109,8 +109,8 @@
         <div class="back">
           <p>
             You are an inspiration, and I want you to know that I'll always be
-            here for you, no matter what. If you ever need anything, I'm just a
-            message away and will respond as soon as I can. My time is yours
+            here for you, no matter what. If you ever need anything,
+            message me and i will respond as soon as I can. My time is yours
             whenever you need it.
           </p>
         </div>
@@ -156,7 +156,7 @@
         <div class="back cover">
           <h3>Cutest Queen , Lama</h3>
           <p>
-            Content:By Syntone<br /><a
+            Content By Syntone<br /><a
               href="https://www.instagram.com/isyntne/"
               target="_blank"
               rel="nofollow"
